--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
 install:
   - pip install flake8
   - pip install flake8_docstrings
-  - pip install nose
+  - pip install pytest
   - pip install pep8-naming
 script:
-  - nosetests .
+  - py.test .
   - flake8 .
