--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,7 +56,7 @@ markdown_extensions:
       base_path: docs/src/markdown/_snippets
   - pymdownx.keys:
       separator: ＋
-  - pymdownx.spoilers:
+  - pymdownx.details:
 
 extra:
   palette:
