--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,6 @@ commands=
     flake8 {toxinidir}
 
 [flake8]
-ignore=D202,D203,F403,E402,N802,D401
+ignore=D202,D203,F403,E402,N802,D401,W504
 max-line-length=120
 exclude=site/*.py,.tox/*
