--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ deps=
     flake8-mutable
     flake8-builtins
 commands=
-    flake8 {toxinidir}
+    flake8 "{toxinidir}"
 
 [flake8]
 ignore=D202,D203,F403,E402,N802,D401,W504
