Use `typing` dependency, update notifier default, update CI and docs

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist=True
 envlist =
-    py35,py36,py37,p38,lint
+    py39,py310,py311,py312,py313,py314,lint
 
 [testenv]
 deps=
@@ -13,8 +13,8 @@ commands=
 deps=
     -rdocs/src/requirements.txt
 commands=
-    mkdocs build --clean --verbose --strict
-    python -m pyspelling
+    "{envpython}" -m mkdocs build --clean --verbose --strict
+    pyspelling
 
 [testenv:lint]
 deps=
